<resources>

    <string name="app_name">RssReader</string>
    <string name="label_rss_feed">RssFeed</string>
    <string name="menu_settings">Settings</string>
    <string name="confirm_end_app">アプリケーションを終了しますか？</string>
    <string name="empty_message">データがありません。</string>
    <string name="label_article_title">記事タイトル</string>
    <string name="label_article_date">投稿日時</string>
    <string name="label_update_interval">更新間隔</string>
    <string name="label_one_hour">1時間毎</string>
    <string name="label_six_hour">6時間毎</string>
    <string name="label_twelve_hour">12時間毎</string>
    <string name="label_twentyfour_hour">24時間毎</string>
    <string name="radio_button1_id">1</string>
    <string name="radio_button2_id">6</string>
    <string name="radio_button3_id">12</string>
    <string name="radio_button4_id">24</string>
    <string name="fetch_rss_feed_success">RSSフィードの登録に成功しました。</string>
    <string name="fetch_rss_feed_fail">RSSフィードの登録に失敗しました。すでに登録されているか、RSS2.0に対応しているか確認してください</string>
    <string name="fetch_rss_feed_content_delete">RSSコンテンツの削除を削除しました。</string>
    <string name="fetch_rss_feed_content_refresh">RSSの再取得に成功しました。</string>
    <string name="label_url">URL:</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="action_bar_close">Clsoe</string>
    <string name="action_bar_add">Add</string>
</resources>