<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgThumbnail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:adjustViewBounds="false"
        android:contentDescription="@string/empty_message"
        android:scaleType="centerCrop" >

    </ImageView>
    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imgThumbnail"
        android:text="@string/label_article_date"
        android:textSize="20sp" >
    </TextView>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_date"
        android:layout_toRightOf="@+id/imgThumbnail"
        android:text="@string/label_article_title"
        android:textSize="20sp" >
    </TextView>
</RelativeLayout>